@@ -3,7 +3,9 @@ v0.8 - Pending
 	+ Implemented 'custom actions' framework, including batch actions (Thomas Güttler)
 	+ --onload or -o argument for performing actions on image loading (Thomas Güttler)
 	+ Ability to delete an image (Bjoern Martensen/Luzi)
-	+ Opening with 'load all images in dir' now gives expected result (Bjoern Martensen)
+	+ Show "searching..." in statusbar when searching for images (Escape to abort)
+	+ Bug: Opening with 'load all images in dir' gives expected result (Bjoern Martensen)
+	+ Bug: Cannot open folder while search process is active
 	+ Added French translation (Mike Massonnet)
 	+ Added Polish translation (Tomasz Dominikowski)
 	+ Added Russian translation (mavka)
